<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_tab_home"
        android:title="@string/tab_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_tab_search"
        android:title="@string/tab_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_tab_bookmark"
        android:title="@string/tab_bookmarks"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_tab_settings"
        android:title="@string/tab_settings"
        app:showAsAction="ifRoom" />
</menu>